# moharena-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
custom_pk3/: zzz-Dark_Sniper_zztoggleskin_fix.pk3
moh_arena_demo_reviewer/: __init__.py  __main__.py  app.py  commands.py  config_writer.py  ffmpeg_recorder.py  hud.py  openmohaa_controller.py  paths.py
moh_arena_demo_reviewer/game_files/: autoexec.cfg  moh_arena_demo_review.cfg
moh_arena_demo_reviewer/game_files/ui/: moh_arena_demo_hud_ui.urc  moh_arena_demo_review.urc
tests/: test_commands.py  test_config_writer.py  test_ffmpeg_recorder.py  test_hud.py  test_openmohaa_controller.py  test_paths.py
