[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moh-arena-demo-reviewer"
version = "0.1.0"
description = "Local desktop OpenMoHAA demo review/player controller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pyobjc-framework-Quartz>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moh_arena_demo_reviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
